# -*- coding: utf-8 -*-
[metadata]
name = dlm
summary = Nothing
description-file =
    README.md
author = oussayer
author-email = adnane.oussayer@gmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/Adnane-DS/dlm
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    dlm

[entry_points]

deepaas.v2.model = 
    dlm = dlm.models.deep_api

